exercises/add-ons-usecase/5-traffic-shifting-with-lb.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-traffic-shifting
  namespace: app-tier
spec:
  hosts:
    - app-tier-svc.app-tier.svc.cluster.local
  http:
  - route:
    - destination:
        host: app-tier-svc.app-tier.svc.cluster.local
        subset: v1
      weight: 50
    - destination:
        host: app-tier-svc.app-tier.svc.cluster.local
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app-dr
  namespace: app-tier
spec:
  host: app-tier-svc.app-tier.svc.cluster.local
  trafficPolicy:
     loadBalancer: 
        simple: ROUND_ROBIN
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
