exercises/add-ons-usecase/non-http-failover.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
 name: non-http-failover
 namespace: test-tier
spec:
 hosts:
 - mytierapp.com
 location: MESH_EXTERNAL
 ports:
 - number: 22
 name: tcp
 protocol: TCP
 resolution: DNS
 endpoints:
 - address: ec2-3-7-183-124.ap-south-1.compute.amazonaws.com
 locality: green-dc1
 ports:
 tcp: 22
 - address: ec2-15-207-229-119.ap-south-1.compute.amazonaws.com
 locality: blue-dc-2
 ports:
 tcp: 22
