exercises/add-ons-usecase/sidecar-tls-orination.yaml



# Virtual Service for routing traffic from app-container to Istio-sidecar-proxy 
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mtls-vs
spec:
  hosts:
  - ec2-54-200-243-196.us-west-2.compute.amazonaws.com
  http:
  - route:
    - destination:
        host: ec2-54-200-243-196.us-west-2.compute.amazonaws.com
        port:
          number: 443
---
# Service entry for external mTLS enabled service 
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: mtls-se
spec:
  hosts:
  - ec2-54-200-243-196.us-west-2.compute.amazonaws.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
# Destination rule for using custom certs attached as secrets/configmap on istio-sidecar-proxy 
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mtls-dr
spec:
  host: ec2-54-200-243-196.us-west-2.compute.amazonaws.com
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
    - port:
        number: 443
      tls:
        mode: MUTUAL
        clientCertificate: /etc/certs/client.crt
        privateKey: /etc/certs/client.key
        caCertificates: /etc/certs/giri.local.crt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: test-tier
  name: test-tier-deployment
  namespace: test-tier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-tier
  strategy: {}
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-logs-container: test-tier
        sidecar.istio.io/status: '{"initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-data","istio-podinfo","istio-token","istiod-ca-cert","client-credential"],"imagePullSecrets":["aspen-mesh-pull-secret"]}'
        sidecar.istio.io/userVolumeMount: '[{"name":"client-certs", "mountPath":"/etc/certs", "readonly":true}]'
        sidecar.istio.io/userVolume: '[{"name":"client-certs", "secret":{"secretName":"client-certs"}}]'
      creationTimestamp: null
      labels:
        app: test-tier
        istio.io/rev: default
        security.istio.io/tlsMode: istio
        service.istio.io/canonical-name: test-tier
        service.istio.io/canonical-revision: latest
    spec:
      containers:
      - image: giriraj789/tester:v1
        name: test-tier
        resources: {}
      - args:
        - proxy
        - sidecar
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --serviceCluster
        - test-tier.$(POD_NAMESPACE)
        - --proxyLogLevel=warning
        - --proxyComponentLogLevel=misc:error
        - --log_output_level=default:info
        - --concurrency
        - "2"
        image: quay.io/aspenmesh/am-istio:proxyv2-1.9.8-am1
        imagePullPolicy: Always
        name: istio-proxy
        ports:
        - containerPort: 15090
          name: http-envoy-prom
          protocol: TCP
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /healthz/ready
            port: 15021
          initialDelaySeconds: 1
          periodSeconds: 2
          timeoutSeconds: 3
        resources:
          limits:
            cpu: "2"
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 1337
          runAsNonRoot: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /var/run/secrets/istio
          name: istiod-ca-cert
        - mountPath: /var/lib/istio/data
          name: istio-data
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /var/run/secrets/tokens
          name: istio-token
        - mountPath: /etc/istio/pod
          name: istio-podinfo
      imagePullSecrets:
      - name: aspen-mesh-pull-secret
      securityContext:
        fsGroup: 1337
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - emptyDir: {}
        name: istio-data
      - downwardAPI:
          items:
          - fieldRef:
              fieldPath: metadata.labels
            path: labels
          - fieldRef:
              fieldPath: metadata.annotations
            path: annotations
          - path: cpu-limit
            resourceFieldRef:
              containerName: istio-proxy
              divisor: 1m
              resource: limits.cpu
          - path: cpu-request
            resourceFieldRef:
              containerName: istio-proxy
              divisor: 1m
              resource: requests.cpu
        name: istio-podinfo
      - name: istio-token
        projected:
          sources:
          - serviceAccountToken:
              audience: istio-ca
              expirationSeconds: 43200
              path: istio-token
      - configMap:
          name: istio-ca-root-cert
        name: istiod-ca-cert
status: {}
---
