exercises/add-ons-usecase/tm-load-balancing.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-vs
  namespace: app-tier
spec:
  hosts:
  - app-tier-svc.app-tier.svc.cluster.local
  http:
  - route:
    - destination:
        host: app-tier-svc.app-tier.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: lb-example-RR
  namespace: app-tier
spec: 
  host: app-tier-svc.app-tier.svc.cluster.local 
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
---
